--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3338,6 +3338,7 @@ input, select, textarea {
 			#wrapper > .bg {
 				background-position: 45%;
 			}
+		}
 
 			@supports (-webkit-touch-callout: none)  {
 
